[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "ruff>=0.11.9",
    "commons-db @ file://../commons-db",
]

[tool.ruff]
line-length = 120
target-version = "py310"
